--- a/application/clients/desktop/src/app/projects/projects.component.html
+++ b/application/clients/desktop/src/app/projects/projects.component.html
@@ -105,7 +105,7 @@
               <div class="form-group">
                 <label for="template">Select Template</label>
                 <select class="form-control" id="template" formControlName="template"
-                  [ngClass]="{ 'is-invalid': submitted && form_control.secondaryLanguage.errors }">
+                  [ngClass]="{ 'is-invalid': submitted && form_control.template.errors }">
                   <option value="" selected>select template</option>
                   <option *ngFor="let tempalte of gepTemplates;let i = index" [ngValue]="tempalte">{{ tempalte.name }}
                   </option>
@@ -125,12 +125,11 @@
               <div class="form-group">
                 <label for="primary-language">{{ 'primary_language' | i18next }}</label>
                 <select class="form-control" id="primary-language" [(ngModel)]=createProject.value.primaryLanguage
-                  formControlName="primaryLanguage"
+                  formControlName="primaryLanguage" (click)=onSecondoryLangSelect()
                   [ngClass]="{ 'is-invalid': submitted && form_control.primaryLanguage.errors }">
                   <!-- <option value="" selected>{{'select_primary' | i18next}}</option> -->
                   <option *ngFor="let p of primaryLanguages" [ngValue]="p">{{ p }}</option>
                 </select>
-                <br />
                 <!-- <input class="form-control" id="primary-language" [(ngModel)]="lang" formControlName="primaryLanguage"> -->
                 <div *ngIf="submitted && form_control.primaryLanguage.errors" class="invalid-feedback">
                   <div *ngIf="form_control.primaryLanguage.errors.required">{{'require_primaryLanguage' | i18next}}
@@ -142,7 +141,8 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="secondary-language">{{ 'secondary_language' | i18next }}</label>
-                <select class="form-control" id="secondary-language" formControlName="secondaryLanguage"
+                <select class="form-control" id="secondary-language" [(ngModel)]=createProject.value.secondoryLanguage
+                  formControlName="secondaryLanguage"
                   [ngClass]="{ 'is-invalid': submitted && form_control.secondaryLanguage.errors }">
                   <option value="" selected>{{'select_secondary' | i18next}}</option>
                   <option *ngFor="let s of secondoryLanguages" [ngValue]="s">{{ s}}</option>
