--- a/application/clients/desktop/src/assets/css/template/ciscotemplate.css
+++ b/application/clients/desktop/src/assets/css/template/ciscotemplate.css
@@ -7,7 +7,7 @@
 body{
     background:#fff;
     color:#444;
-    font-family:\"Open Sans\", sans-serif;
+    font-family:"Open Sans", sans-serif;
     overflow-x:hidden;
 }
 a{
@@ -24,7 +24,7 @@ p{
     margin:0 0 30px 0;
 }
 h1, h2, h3, h4, h5, h6{
-    font-family:\"Montserrat\", sans-serif;
+    font-family:"Montserrat", sans-serif;
     font-weight:400;
     margin:0 0 20px 0;
     padding:0;
@@ -71,7 +71,7 @@ h1, h2, h3, h4, h5, h6{
     margin:0;
     padding:0;
     line-height:1;
-    font-family:\"Montserrat\", sans-serif;
+    font-family:"Montserrat", sans-serif;
     font-weight:700;
 }
 #header #logo h1 a{
@@ -90,7 +90,7 @@ h1, h2, h3, h4, h5, h6{
     width:100%;
     height:60vh;
     position:relative;
-    background:url(\"assets/img/cisco1.jpg\") no-repeat;
+    background:url("assets/img/cisco1.jpg") no-repeat;
     background-size:cover;
 }
 #intro .intro-content{
@@ -127,7 +127,7 @@ h1, h2, h3, h4, h5, h6{
     text-decoration:underline;
 }
 #intro .intro-content .btn-get-started, #intro .intro-content .btn-projects{
-    font-family:\"Raleway\", sans-serif;
+    font-family:"Raleway", sans-serif;
     font-size:15px;
     font-weight:bold;
     letter-spacing:1px;
@@ -219,7 +219,7 @@ h1, h2, h3, h4, h5, h6{
     padding-right:22px;
 }
 .sf-arrows .sf-with-ul:after{
-    content:\"\\f107\";
+    content:"f107";
     position:absolute;
     right:8px;
     font-family:FontAwesome;
@@ -227,14 +227,14 @@ h1, h2, h3, h4, h5, h6{
     font-weight:normal;
 }
 .sf-arrows ul .sf-with-ul:after{
-    content:\"\\f105\";
+    content:"f105";
 }
 .nav-menu a{
     padding:10px 8px;
     text-decoration:none;
     display:inline-block;
     color:#555;
-    font-family:\"Raleway\", sans-serif;
+    font-family:"Raleway", sans-serif;
     font-weight:700;
     font-size:14px;
     outline:none;
@@ -340,7 +340,7 @@ body.mobile-nav-active #mobile-nav-toggle{
     color:#0c2e8a;
     font-weight:700;
     font-size:36px;
-    font-family:\"Raleway\", sans-serif;
+    font-family:"Raleway", sans-serif;
 }
 #about .content h3{
     color:#555;
@@ -545,7 +545,7 @@ body.mobile-nav-active #mobile-nav-toggle{
     color:#fff;
 }
 #call-to-action .cta-btn{
-    font-family:\"Montserrat\", sans-serif;
+    font-family:"Montserrat", sans-serif;
     font-weight:700;
     font-size:16px;
     letter-spacing:1px;
@@ -666,7 +666,7 @@ body.mobile-nav-active #mobile-nav-toggle{
     box-shadow:none;
     font-size:15px;
 }
-#contact .form button[type=\"submit\"]{
+#contact .form button[type="submit"]{
     background:#50d8af;
     border:0;
     border-radius:3px;
@@ -675,7 +675,7 @@ body.mobile-nav-active #mobile-nav-toggle{
     transition:0.4s;
     cursor:pointer;
 }
-#contact .form button[type=\"submit\"]:hover{
+#contact .form button[type="submit"]:hover{
     background:#2dc899;
 }
 #footer{
