--- a/application/clients/desktop/src/app/techarchitecture-manager/techarchitecture-manager.component.html
+++ b/application/clients/desktop/src/app/techarchitecture-manager/techarchitecture-manager.component.html
@@ -115,11 +115,15 @@
           </mat-form-field>
         </div>
         <div class="techDropdown col-md-4 col-lg-4 col-sm-6">
-
         </div>
       </div>
       <!-- </form> -->
     </div>
+    <div style="padding-right: 20px; display: flex; justify-content: flex-end;">
+        <button class="generateEntityButton btn-space btn_color" mat-raised-button color="primary" 
+                    (click)="generateField()">Export
+          Project</button>
+  </div>
   </div>
 </mat-expansion-panel>
 
