--- a/application/clients/desktop/src/app/projects/projects.component.html
+++ b/application/clients/desktop/src/app/projects/projects.component.html
@@ -2,6 +2,8 @@
   <div class="row" style="margin-top: 50px;">
     <div class="col-md-12">
       <div class="row-button">
+      <button mat-raised-button color="primary" for="file "type="file" id="file"
+           (change)="handleFileInput($event.target.files)" (click)=openImportModal()>{{ 'import project' | i18next }}</button>
         <button mat-raised-button color="primary" (click)=openModal()>{{ 'create_project' | i18next }}</button>
       </div>
     </div>
@@ -75,12 +77,7 @@
       <mat-expansion-panel-header>
         <mat-panel-title> Shared Applications </mat-panel-title>
       </mat-expansion-panel-header>
-      <p >
-    <label for="file">Choose yaml file to import project</label>
-    <input type="file"
-           id="file"
-           (change)="handleFileInput($event.target.files)">
-</p>
+      <p>No Projects Available.</p>
     </mat-expansion-panel>
   </mat-accordion>
 </div>
@@ -230,6 +227,38 @@
       </div>
       <div class="modal-footer" style="padding: 5px">
         <button type="button" (click)="onCloseHandledGen()" class="btn btn-default">{{ 'cancel' | i18next }}</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayImportModel}">
+  <div class="modal-dialog modal-lg" role="dialog">
+    <div class="modal-content">
+      <div class="container">
+        <form class="m-2" [formGroup]="createProject">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="form-group">
+                <label for="file">Choose yaml file to import project</label>
+                    <input #myInput type="file" id="file"
+           (change)="handleFileInput($event.target.files)">
+                </div>
+              </div>
+          </div>
+
+          <div class="row">
+
+            <div class="col-md-6">
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <div class="form-group">
+          <button type="button" class="btn button-create">{{ 'Import' | i18next }}</button>
+          <button type="button" class="btn button-close" (click)="closeImportModal()">{{ 'Cancel' | i18next }}</button>
+        </div>
       </div>
     </div>
   </div>
