import api integrations

--- a/application/clients/desktop/src/app/projects/projects.component.html
+++ b/application/clients/desktop/src/app/projects/projects.component.html
@@ -256,7 +256,7 @@
       </div>
       <div class="modal-footer">
         <div class="form-group">
-          <button type="button" class="btn button-create">{{ 'Import' | i18next }}</button>
+          <button type="button" class="btn button-create" (click)="importProject()">{{ 'Import' | i18next }}</button>
           <button type="button" class="btn button-close" (click)="closeImportModal()">{{ 'Cancel' | i18next }}</button>
         </div>
       </div>
